--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autod-egg": "^1.0.0",
     "egg-bin": "^4.3.5",
     "egg-ci": "^1.8.0",
+    "egg-cors": "^2.1.2",
     "egg-mock": "^3.14.0",
     "eslint": "^4.11.0",
     "eslint-config-egg": "^6.0.0",
